correct nav link spacing issue and footer now sticks to bottom of page

--- a/vite-portfolio/src/components/Footer.module.css
+++ b/vite-portfolio/src/components/Footer.module.css
@@ -1,18 +1,14 @@
-.footerWrapper {
+.wrapper {
+    /* font-family: Poppins,sans-serif; */
     opacity: 1;
     margin-top: 0px;
-    position: relative;
-    display: block;
-}
-.wrapper {
-        /* font-family: Poppins,sans-serif; */
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        padding: 40px 0 20px;
-        display: flex;
-        justify-content: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 40px 0 20px;
+    display: flex;
+    justify-content: center;
 }
 
 a {
